<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hippo_gz_plugins</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lennart.alff@gmail.com">vscode</maintainer>
  <license>TODO: License declaration</license>

  <depend>ignition-plugin</depend>
  <depend>ignition-gazebo6</depend>
  <depend>ignition-common4</depend>
  <depend>hippo_gz_msgs</depend>
  <depend>hippo_common</depend>
  <depend>hippo_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
